# LeetcodeSolver

./: .gitignore  README.md  challenge.ipynb  pyproject.toml
classes/: code_writer.py  problem.py  shit_filter.py
scripts/: debug.py
tools/: file_manager.py  helpers.py  llama_templates.py
utilities/: score.py
