[tool.poetry]
name = "chillsmartsolver"
version = "0.1.0"
description = ""
authors = ["neuromaxer <neuromaxed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
numpy = "^2.1.3"
aleph-alpha-client = "^7.6.0"
notebook = "^7.2.2"
tqdm = "^4.67.0"
ipykernel = "^6.29.5"
pyext = "0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
